tests/NormalTests/paczka1/fuzzy1/86870721.err
Error in line 2: S53 S763 53,1
Error in line 8: jVWDr S763 6,8
Error in line 4: S53 A347 68,1
Error in line 13: Kc6qw S763 73,6
Error in line 23: Kc6qw S53 43,6
